[gd_scene load_steps=3 format=3]

[ext_resource type="Script" uid="uid://d2rjpiwjuegof" path="res://scripts/ui/skill_tree_ui.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Panel"]
bg_color = Color(0.15, 0.15, 0.2, 0.95)
border_color = Color(0.5, 0.5, 0.6)
set_border_width_all(3)
set_corner_radius_all(10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_CloseButton"]
bg_color = Color(0.8, 0.2, 0.2, 1.0)
border_color = Color(1.0, 0.3, 0.3, 1.0)
set_border_width_all(2)
set_corner_radius_all(4)

[node name="SkillTreeUI" type="CanvasLayer"]
layer = 128
script = ExtResource("1")

[node name="SkillTreeControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -112.0
offset_right = 240.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="SkillTreeControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Panel")

[node name="CloseButton" type="Button" parent="SkillTreeControl/PanelContainer"]
layout_mode = 0
offset_left = 448.0
offset_top = 8.0
offset_right = 472.0
offset_bottom = 32.0
custom_minimum_size = Vector2(24, 24)
theme_override_styles/normal = SubResource("StyleBoxFlat_CloseButton")
text = "‚úï"

[node name="VBoxContainer" type="VBoxContainer" parent="SkillTreeControl/PanelContainer"]
layout_mode = 2

[node name="TitleBar" type="PanelContainer" parent="SkillTreeControl/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SkillTreeControl/PanelContainer/VBoxContainer/TitleBar"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="SkillTreeControl/PanelContainer/VBoxContainer/TitleBar/HBoxContainer"]
layout_mode = 2
text = "‚≠ê ÊäÄËÉΩÊ†ë"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="SkillTreeControl/PanelContainer/VBoxContainer/TitleBar/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CoinLabel" type="Label" parent="SkillTreeControl/PanelContainer/VBoxContainer/TitleBar/HBoxContainer"]
layout_mode = 2
text = "üí∞ 0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="NotificationLabel" type="Label" parent="SkillTreeControl/PanelContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="SkillTreeControl/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="SkillsVBox" type="VBoxContainer" parent="SkillTreeControl/PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[connection signal="pressed" from="SkillTreeControl/PanelContainer/CloseButton" to="." method="_on_close_button_pressed"]
