extends CanvasLayer

## ============================================================================
## æŠ€èƒ½æ ‘ UI ç®¡ç†å™¨
## ============================================================================
## åŠŸèƒ½ï¼šæ˜¾ç¤ºå’Œäº¤äº’æŠ€èƒ½æ ‘ç•Œé¢
## æ³¨æ„ï¼šç»§æ‰¿è‡ª CanvasLayerï¼Œé¿å…é‡å®šä¹‰ visible å±æ€§å’Œ show()/hide() æ–¹æ³•
## ============================================================================


## ============================================================================
## ä¿¡å·å®šä¹‰
## ============================================================================

signal skill_tree_opened
signal skill_tree_closed


## ============================================================================
## èŠ‚ç‚¹å¼•ç”¨
## ============================================================================

@onready var ui_control: Control = $SkillTreeControl
@onready var title_label: Label = $SkillTreeControl/PanelContainer/VBoxContainer/TitleBar/HBoxContainer/TitleLabel
@onready var coin_label: Label = $SkillTreeControl/PanelContainer/VBoxContainer/TitleBar/HBoxContainer/CoinLabel
@onready var close_button: Button = $SkillTreeControl/PanelContainer/CloseButton
@onready var notification_label: Label = $SkillTreeControl/PanelContainer/VBoxContainer/NotificationLabel
@onready var scroll_container: ScrollContainer = $SkillTreeControl/PanelContainer/VBoxContainer/ScrollContainer
@onready var skills_container: VBoxContainer = $SkillTreeControl/PanelContainer/VBoxContainer/ScrollContainer/SkillsVBox


## ============================================================================
## é…ç½®å¸¸é‡
## ============================================================================

const NOTIFICATION_DURATION := 2.0  # é€šçŸ¥æ˜¾ç¤ºæ—¶é•¿ï¼ˆç§’ï¼‰


## ============================================================================
## çŠ¶æ€å˜é‡
## ============================================================================

var is_skill_tree_visible: bool:
	get:
		return _is_ui_visible()
	set(value):
		if value:
			_open_skill_tree()
		else:
			_close_skill_tree()

var _notification_tween: Tween = null


## ============================================================================
## åˆå§‹åŒ–
## ============================================================================

func _ready() -> void:
	# åˆå§‹éšè— UI
	if ui_control:
		ui_control.visible = false

	# è¿æ¥å…³é—­æŒ‰é’®
	if close_button:
		close_button.pressed.connect(_on_close_button_pressed)

	# è¿æ¥æŠ€èƒ½æ ‘ç®¡ç†å™¨ä¿¡å·
	SkillTreeManager.skill_upgraded.connect(_on_skill_upgraded)
	SkillTreeManager.upgrade_failed.connect(_on_upgrade_failed)

	# è¿æ¥ ESC é”®
	_setup_escape_key()


## é…ç½® ESC é”®å…³é—­
func _setup_escape_key() -> void:
	# ESC é”®ä¼šé€šè¿‡ _input() å¤„ç†
	pass


## ============================================================================
## UI æ˜¾ç¤º/éšè—ï¼ˆé¿å…é‡å®šä¹‰ CanvasLayer åŸç”Ÿæ–¹æ³•ï¼‰
## ============================================================================

## æ£€æŸ¥ UI æ˜¯å¦å¯è§
func _is_ui_visible() -> bool:
	return ui_control != null and ui_control.visible


## æ‰“å¼€æŠ€èƒ½æ ‘
func _open_skill_tree() -> void:
	if ui_control:
		ui_control.visible = true

	# æ›´æ–°é‡‘å¸æ˜¾ç¤º
	_update_coin_display()

	# åˆ·æ–°æŠ€èƒ½åˆ—è¡¨
	_populate_skill_list()

	# ç¦ç”¨ç©å®¶æ§åˆ¶
	_disable_player_control()

	emit_signal("skill_tree_opened")
	print("ğŸ“– æŠ€èƒ½æ ‘å·²æ‰“å¼€")


## å…³é—­æŠ€èƒ½æ ‘
func _close_skill_tree() -> void:
	if ui_control:
		ui_control.visible = false

	# æ¢å¤ç©å®¶æ§åˆ¶
	_enable_player_control()

	emit_signal("skill_tree_closed")
	print("ğŸ“• æŠ€èƒ½æ ‘å·²å…³é—­")


## åˆ‡æ¢æŠ€èƒ½æ ‘æ˜¾ç¤ºçŠ¶æ€
func toggle_skill_tree() -> void:
	is_skill_tree_visible = not is_skill_tree_visible


## ============================================================================
## æŠ€èƒ½åˆ—è¡¨ç”Ÿæˆ
## ============================================================================

## å¡«å……æŠ€èƒ½åˆ—è¡¨ï¼ˆæ ‘çŠ¶ç»“æ„ï¼‰
func _populate_skill_list() -> void:
	# æ¸…ç©ºç°æœ‰å†…å®¹
	for child in skills_container.get_children():
		child.queue_free()

	# è·å–æ‰€æœ‰é»˜è®¤è§£é”çš„æŠ€èƒ½ï¼ˆæ ¹æŠ€èƒ½ï¼‰
	var root_skills = _get_root_skills()

	# é€’å½’åˆ›å»ºæŠ€èƒ½æ ‘
	for skill_id in root_skills:
		_create_skill_tree_recursive(skill_id, 0)


## è·å–æ ¹æŠ€èƒ½ï¼ˆæ— å‰ç½®æ¡ä»¶çš„æŠ€èƒ½ï¼‰
func _get_root_skills() -> Array:
	var root_skills = []
	for skill_id in SkillTreeManager.SKILL_CONFIG:
		var config = SkillTreeManager.get_skill_config(skill_id)
		if config.unlock_condition == "":
			root_skills.append(skill_id)
	return root_skills


## é€’å½’åˆ›å»ºæŠ€èƒ½æ ‘
func _create_skill_tree_recursive(skill_id: String, depth: int) -> void:
	# æ£€æŸ¥æŠ€èƒ½æ˜¯å¦å·²è§£é”
	if not SkillTreeManager.is_skill_unlocked(skill_id):
		return

	# åˆ›å»ºæŠ€èƒ½é¡¹
	var skill_item = _create_skill_item(skill_id, depth)
	skills_container.add_child(skill_item)

	# æŸ¥æ‰¾ä¾èµ–æ­¤æŠ€èƒ½çš„å­æŠ€èƒ½
	var child_skills = _get_child_skills(skill_id)

	# é€’å½’åˆ›å»ºå­æŠ€èƒ½
	for child_id in child_skills:
		_create_skill_tree_recursive(child_id, depth + 1)


## è·å–ä¾èµ–æŒ‡å®šæŠ€èƒ½çš„å­æŠ€èƒ½
func _get_child_skills(parent_skill_id: String) -> Array:
	var children = []
	for skill_id in SkillTreeManager.SKILL_CONFIG:
		var config = SkillTreeManager.get_skill_config(skill_id)
		if config.unlock_condition == parent_skill_id:
			children.append(skill_id)
	return children


## åˆ›å»ºå•ä¸ªæŠ€èƒ½é¡¹ UI
func _create_skill_item(skill_id: String, depth: int) -> HBoxContainer:
	var config = SkillTreeManager.get_skill_config(skill_id)
	var current_level = SkillTreeManager.get_skill_level(skill_id)
	var upgrade_cost = SkillTreeManager.get_upgrade_cost(skill_id)
	var skill_value = SkillTreeManager.get_skill_value(skill_id)

	# åˆ›å»ºå®¹å™¨
	var hbox = HBoxContainer.new()
	hbox.name = "SkillItem_%s" % skill_id
	hbox.custom_minimum_size.y = 80

	# æ·»åŠ ç¼©è¿›ï¼ˆåŸºäºæ·±åº¦ï¼‰
	var indent = 40 * depth
	if indent > 0:
		var indent_control = Control.new()
		indent_control.custom_minimum_size.x = indent
		hbox.add_child(indent_control)

	# åˆ›å»ºæŠ€èƒ½å¡ç‰‡ï¼ˆä½¿ç”¨ PanelContainer ä½œä¸ºèƒŒæ™¯ï¼‰
	var card = PanelContainer.new()
	card.name = "SkillCard"
	card.custom_minimum_size = Vector2(420, 70)
	card.mouse_filter = Control.MOUSE_FILTER_PASS  # å…è®¸é¼ æ ‡äº‹ä»¶ç©¿é€

	# åˆ›å»ºå¡ç‰‡å†…éƒ¨å¸ƒå±€
	var card_hbox = HBoxContainer.new()
	card_hbox.name = "CardHBox"

	# å›¾æ ‡ï¼ˆä½¿ç”¨ Emoji å ä½ç¬¦ï¼‰
	var icon_container = CenterContainer.new()
	icon_container.custom_minimum_size = Vector2(60, 60)

	var icon_label = Label.new()
	icon_label.name = "IconLabel"
	icon_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	icon_label.vertical_alignment = VERTICAL_ALIGNMENT_CENTER
	icon_label.add_theme_font_size_override("font_size", 32)

	# æ ¹æ® effect_type é€‰æ‹© Emoji
	var emoji = _get_skill_emoji(config.effect_type)
	icon_label.text = emoji

	icon_container.add_child(icon_label)
	card_hbox.add_child(icon_container)

	# æŠ€èƒ½ä¿¡æ¯åŒºåŸŸ
	var info_vbox = VBoxContainer.new()
	info_vbox.name = "InfoVBox"
	info_vbox.size_flags_horizontal = Control.SIZE_EXPAND_FILL

	# æŠ€èƒ½åç§°å’Œç­‰çº§
	var name_level_hbox = HBoxContainer.new()

	var name_label = Label.new()
	name_label.name = "NameLabel"
	name_label.text = config.name
	name_label.add_theme_font_size_override("font_size", 16)
	name_label.add_theme_color_override("font_color", Color.WHITE)
	name_level_hbox.add_child(name_label)

	var spacer = Control.new()
	spacer.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	name_level_hbox.add_child(spacer)

	var level_label = Label.new()
	level_label.name = "LevelLabel"
	level_label.text = "Lv.%d/%d" % [current_level, config.max_level]
	level_label.add_theme_font_size_override("font_size", 14)
	level_label.add_theme_color_override("font_color", Color.YELLOW)
	name_level_hbox.add_child(level_label)

	info_vbox.add_child(name_level_hbox)

	# æŠ€èƒ½æè¿°
	var desc_label = Label.new()
	desc_label.name = "DescLabel"
	desc_label.text = config.description
	desc_label.add_theme_font_size_override("font_size", 12)
	desc_label.add_theme_color_override("font_color", Color.LIGHT_GRAY)
	info_vbox.add_child(desc_label)

	# æ•ˆæœå€¼
	if skill_value > 0:
		var value_label = Label.new()
		value_label.name = "ValueLabel"
		value_label.text = "å½“å‰åŠ æˆ: +%d" % skill_value
		value_label.add_theme_font_size_override("font_size", 11)
		value_label.add_theme_color_override("font_color", Color.CYAN)
		info_vbox.add_child(value_label)

	card_hbox.add_child(info_vbox)

	# å‡çº§æŒ‰é’®
	var upgrade_btn = Button.new()
	upgrade_btn.name = "UpgradeButton"
	upgrade_btn.custom_minimum_size = Vector2(80, 50)

	if current_level >= config.max_level:
		upgrade_btn.text = "å·²æ»¡çº§"
		upgrade_btn.disabled = true
	else:
		upgrade_btn.text = "%dğŸ’°" % upgrade_cost

		# æ£€æŸ¥é‡‘å¸æ˜¯å¦è¶³å¤Ÿ
		if GlobalData.player_coin < upgrade_cost:
			upgrade_btn.disabled = true
			upgrade_btn.tooltip_text = "é‡‘å¸ä¸è¶³"
		else:
			upgrade_btn.tooltip_text = "ç‚¹å‡»å‡çº§"
			# è¿æ¥æŒ‰é’®ä¿¡å·ï¼ˆä¼ é€’ skill_id å‚æ•°ï¼‰
			upgrade_btn.pressed.connect(_on_upgrade_button_pressed.bind(skill_id))

	card_hbox.add_child(upgrade_btn)

	card.add_child(card_hbox)
	hbox.add_child(card)

	# æ·»åŠ é¼ æ ‡æ‚¬åœæ•ˆæœ
	_setup_hover_effect(card, upgrade_btn)

	return hbox


## æ ¹æ®æ•ˆæœç±»å‹è·å– Emoji
func _get_skill_emoji(effect_type: String) -> String:
	match effect_type:
		"increase_max_health":
			return "â¤ï¸"
		"increase_attack":
			return "âš”ï¸"
		"increase_speed":
			return "ğŸƒ"
		"increase_critical_chance":
			return "ğŸ’¥"
		_:
			return "â­"  # é»˜è®¤å›¾æ ‡


## è®¾ç½®é¼ æ ‡æ‚¬åœæ•ˆæœ
func _setup_hover_effect(card: PanelContainer, button: Button) -> void:
	# åˆ›å»º StyleBox ç”¨äºé«˜äº®æ•ˆæœ
	var normal_style = StyleBoxFlat.new()
	normal_style.bg_color = Color(0.2, 0.2, 0.3, 0.9)
	normal_style.border_color = Color(0.4, 0.4, 0.5)
	normal_style.set_border_width_all(2)
	normal_style.set_corner_radius_all(8)

	var hover_style = StyleBoxFlat.new()
	hover_style.bg_color = Color(0.3, 0.3, 0.5, 0.95)
	hover_style.border_color = Color(0.8, 0.8, 1.0)
	hover_style.set_border_width_all(3)
	hover_style.set_corner_radius_all(8)

	# åº”ç”¨é»˜è®¤æ ·å¼
	card.add_theme_stylebox_override("panel", normal_style)

	# è¿æ¥é¼ æ ‡äº‹ä»¶
	card.gui_input.connect(func(event: InputEvent):
		if event is InputEventMouseMotion:
			if card.get_rect().has_point(card.get_local_mouse_position()):
				card.add_theme_stylebox_override("panel", hover_style)
			else:
				card.add_theme_stylebox_override("panel", normal_style)
	)

	card.mouse_entered.connect(func():
		card.add_theme_stylebox_override("panel", hover_style)
	)

	card.mouse_exited.connect(func():
		card.add_theme_stylebox_override("panel", normal_style)
	)


## ============================================================================
## äº‹ä»¶å¤„ç†
## ============================================================================

## å¤„ç†è¾“å…¥äº‹ä»¶ï¼ˆESC é”®å…³é—­ï¼‰
func _input(event: InputEvent) -> void:
	if event is InputEventKey:
		if event.keycode == KEY_ESCAPE and event.pressed:
			if is_skill_tree_visible:
				_close_skill_tree()
				get_viewport().set_input_as_handled()


## å‡çº§æŒ‰é’®ç‚¹å‡»äº‹ä»¶
func _on_upgrade_button_pressed(skill_id: String) -> void:
	var success = SkillTreeManager.upgrade_skill(skill_id)

	if success:
		# åˆ·æ–° UI
		_populate_skill_list()
		_update_coin_display()
	else:
		# å¤±è´¥æ¶ˆæ¯å·²é€šè¿‡ upgrade_failed ä¿¡å·å¤„ç†
		pass


## æŠ€èƒ½å‡çº§æˆåŠŸå›è°ƒ
func _on_skill_upgraded(skill_id: String, new_level: int) -> void:
	var config = SkillTreeManager.get_skill_config(skill_id)
	var value = SkillTreeManager.get_skill_value(skill_id)

	var message = "âœ… %s å‡çº§æˆåŠŸï¼Lv.%d (+%d)" % [config.name, new_level, value]
	_show_notification(message, Color.GREEN)


## å‡çº§å¤±è´¥å›è°ƒ
func _on_upgrade_failed(skill_id: String, reason: String) -> void:
	_show_notification("âŒ å‡çº§å¤±è´¥: " + reason, Color.RED)


## å…³é—­æŒ‰é’®ç‚¹å‡»äº‹ä»¶
func _on_close_button_pressed() -> void:
	_close_skill_tree()


## ============================================================================
## UI æ›´æ–°
## ============================================================================

## æ›´æ–°é‡‘å¸æ˜¾ç¤º
func _update_coin_display() -> void:
	if coin_label:
		coin_label.text = "ğŸ’° %d" % GlobalData.player_coin


## æ˜¾ç¤ºé€šçŸ¥æ¶ˆæ¯ï¼ˆå¸¦æ·¡å…¥æ·¡å‡ºåŠ¨ç”»ï¼‰
func _show_notification(message: String, color: Color = Color.WHITE) -> void:
	if not notification_label:
		return

	# åœæ­¢ä¹‹å‰çš„åŠ¨ç”»
	if _notification_tween:
		_notification_tween.kill()

	# è®¾ç½®æ¶ˆæ¯
	notification_label.text = message
	notification_label.modulate = color
	notification_label.visible = true

	# åˆ›å»ºæ·¡å…¥æ·¡å‡ºåŠ¨ç”»
	_notification_tween = create_tween()
	_notification_tween.set_ease(Tween.EASE_IN_OUT)
	_notification_tween.set_trans(Tween.TRANS_LINEAR)

	# æ·¡å…¥
	notification_label.modulate.a = 0.0
	_notification_tween.tween_property(notification_label, "modulate:a", 1.0, 0.3)

	# ä¿æŒæ˜¾ç¤º
	_notification_tween.tween_interval(NOTIFICATION_DURATION - 0.6)

	# æ·¡å‡º
	_notification_tween.tween_property(notification_label, "modulate:a", 0.0, 0.3)

	# éšè—
	_notification_tween.tween_callback(func(): notification_label.visible = false)


## ============================================================================
## ç©å®¶æ§åˆ¶ç®¡ç†ï¼ˆå‚è€ƒå•†åº—ç³»ç»Ÿï¼‰
## ============================================================================

## ç¦ç”¨ç©å®¶æ§åˆ¶
func _disable_player_control() -> void:
	var player = _find_player()
	if player:
		player.set_process_input(false)
		player.set_physics_process(false)


## æ¢å¤ç©å®¶æ§åˆ¶
func _enable_player_control() -> void:
	var player = _find_player()
	if player:
		player.set_process_input(true)
		player.set_physics_process(true)


## æŸ¥æ‰¾ç©å®¶èŠ‚ç‚¹ï¼ˆåŒé‡æŸ¥æ‰¾æœºåˆ¶ï¼‰
func _find_player() -> Node:
	# æ–¹æ³•1ï¼šé€šè¿‡ç»„æŸ¥æ‰¾
	var players = get_tree().get_nodes_in_group("player")
	if players.size() > 0:
		return players[0]

	# æ–¹æ³•2ï¼šé€šè¿‡èŠ‚ç‚¹åç§°æŸ¥æ‰¾
	var player = get_tree().current_scene.find_child("knight", true, false)
	if player:
		return player

	# æ–¹æ³•3ï¼šé€šè¿‡åœºæ™¯æ ¹èŠ‚ç‚¹æŸ¥æ‰¾
	var root_player = get_tree().current_scene.get_node_or_null("knight")
	if root_player:
		return root_player

	push_warning("æœªæ‰¾åˆ°ç©å®¶èŠ‚ç‚¹")
	return null
